# my-some-ip

./: .gitignore  CMakeLists.txt  gen_src.sh  workspace.code-workspace
config/: vsomeip-client.json  vsomeip-service.json
fidl/: HelloWorld.fdepl  HelloWorld.fidl
script/: client.sh  service.sh
src/: HelloWorldClient.cpp  HelloWorldService.cpp
src/ApplicationFabric/: IApplication.h  IApplicationFabric.h  LinuxApplication.cpp  LinuxApplication.h  LinuxApplicationFabric.cpp  LinuxApplicationFabric.h
src/model/: IObserver.h  ISubject.h  RandomSubject.cpp  RandomSubject.h  SyslogSubject.cpp  SyslogSubject.h
src/someip/: RandomObserver.cpp  RandomObserver.h  SomeIPObserver.cpp  SomeIPObserver.h  SyslogObserver.cpp  SyslogObserver.h
test/: CMakeLists.txt  main.cpp
